Updated requirements and tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,12 +15,6 @@ include_package_data = true
 packages = find:
 install_requires =
     Qt.py
-    pathlib2
-    requests
-    packaging
-    beautifulsoup4
-    pyinstaller
-    lxml
     pytest
     pytest-cov
     coveralls
@@ -30,6 +24,8 @@ install_requires =
     sentry-sdk
     tpPyUtils
     tpQtLib
+    artellapipe
+    artellapipe-launcher
 
 [options.extras_require]
 dev =
