--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,7 @@
 # ===================================================================
-# artellapipe-launcher requirements file
+# artellapipe-launcher-plugins-dccselector requirements file
 # ===================================================================
 Qt.py
-pathlib2
-requests
-packaging
-beautifulsoup4
-pyinstaller
-lxml
 pytest
 pytest-cov
 coveralls
@@ -17,3 +11,6 @@ python-json-logger
 sentry-sdk
 tpPyUtils
 tpQtLib
+artellapipe
+artellapipe-launcher
+
