--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,9 @@ sphinx
 sphinx_rtd_theme
 python-json-logger
 sentry-sdk
-tpPyUtils
-tpQtLib
+tpDcc-libs-python
+tpDcc-core
+tpDcc-libs-qt
 artellapipe
 artellapipe-launcher
 
