--- a/setup.cfg
+++ b/setup.cfg
@@ -22,8 +22,9 @@ install_requires =
     sphinx_rtd_theme
     python-json-logger
     sentry-sdk
-    tpPyUtils
-    tpQtLib
+    tpDcc-libs-python   
+    tpDcc-core
+    tpDcc-libs-qt
     artellapipe
     artellapipe-launcher
 
