--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,2 @@
 include artellapipe/launcher/plugins/dccselector/__logging__.ini
-include artellapipe/launcher/plugins/dccselector/resources/icons/color/*.*
+recursive-include artellapipe/launcher/plugins/dccselector/resources/* *.*
