--- a/artellapipe/launcher/plugins/dccselector/__logging__.ini
+++ b/artellapipe/launcher/plugins/dccselector/__logging__.ini
@@ -1,5 +1,5 @@
 [loggers]
-keys=root
+keys=root, artellapipe-launcher-plugins-dccselector
 
 [handlers]
 keys=consoleHandler,rotatingFileHandler
@@ -8,12 +8,18 @@ keys=consoleHandler,rotatingFileHandler
 keys=json, simpleFormatter
 
 [logger_root]
-level=DEBUG
+level=NOTSET
+handlers=
+
+[logger_artellapipe-launcher-plugins-dccselector]
+level=INFO
+qualname=artellapipe-launcher-plugins-dccselector
 handlers=rotatingFileHandler, consoleHandler
+propagate=0
 
 [handler_consoleHandler]
 class=StreamHandler
-level=WARNING
+level=INFO
 formatter=simpleFormatter
 args=(sys.stdout,)
 
