Now versions are managed by versioneer

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,3 +28,11 @@ test =
 
 [bdist_wheel]
 universal=1
+
+[versioneer]
+VCS = git
+style = pep440
+versionfile_source = artellapipe/launcher/plugins/dccselector/_version.py
+versionfile_build =
+tag_prefix =
+parentdir_prefix =
